<?xml version="1.0"?>
<package format="2">
  <name>l_shape_fitting</name>
  <version>1.12.0</version>
  <description>This package implements an L-Shaped PointCloud pose estimation</description>
  <maintainer email="hmx_2013@outlook.com">HMX</maintainer>
  <license>MIT</license>

  <buildtool_depend>autoware_build_flags</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>autoware_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <exec_depend>rostest</exec_depend>
  <exec_depend>rosunit</exec_depend>

  <build_depend>obsdet_msgs</build_depend>
  <exec_depend>obsdet_msgs</exec_depend>
</package>
